moved layout to data-layout in demo.html in order to be W£C compliant... anyway still support layout only attribute

--- a/default.css
+++ b/default.css
@@ -22,7 +22,7 @@ and open the template in the editor.
     cursor:default;
 }
 
-button[layout] {
+button[layout],button[data-layout] {
     box-sizing: content-box;
 }
 
