--- a/default.css
+++ b/default.css
@@ -22,6 +22,11 @@ and open the template in the editor.
     cursor:default;
 }
 
+
+[layout],[data-layout] ,[layout]>*,[data-layout]>*{
+    box-sizing: content-box;
+}
+
 button[layout],button[data-layout] {
     box-sizing: content-box;
 }
