--- a/default.css
+++ b/default.css
@@ -21,9 +21,16 @@ and open the template in the editor.
     cursor:default;
 }
 
+[layout],[data-layout]
+{
+    z-index: 1;
+    font-family: monospace;
+}
+
 
 [layout],[data-layout] ,[layout]>*,[data-layout]>*{
     box-sizing: content-box;
+
 }
 
 button[layout],button[data-layout] {
@@ -47,8 +54,14 @@ button[layout],button[data-layout] {
     background-image: linear-gradient(rgb(222, 239, 255) 0%, rgb(152, 190, 222) 100%);
     color: darkslategrey;
     font-weight: bolder;
-    font-size: larger;
+    /* font-size: large; */
 }
+
+.dialog{
+    box-shadow: 5px 5px 5px #BBBBBB;  
+    border: 4px solid rgb(134, 137, 139);
+}
+
 
 
 .jlaccordionflap
@@ -103,68 +116,68 @@ div.selected
 
 .tree,
 .tree ul {
-  margin:0;
-  padding:0;
-  list-style:none;
+    margin:0;
+    padding:0;
+    list-style:none;
 }
 
 .tree ul {
-  margin-left:1em; /* indentation */
-  position:relative;
+    margin-left:1em; /* indentation */
+    position:relative;
 }
 
 .tree ul ul {margin-left:.5em} /* (indentation/2) */
 
 .tree ul:before {
-  content:"";
-  display:block;
-  width:0;
-  position:absolute;
-  top:0;
-  bottom:0;
-  left:0;
-  border-left:1px solid;
+    content:"";
+    display:block;
+    width:0;
+    position:absolute;
+    top:0;
+    bottom:0;
+    left:0;
+    border-left:1px solid;
 }
 
 .tree li {
-  margin:0;
-  padding:0 1.5em; /* indentation + .5em */
-  line-height:2em; /* default list item's `line-height` */
-  color:#369;
-  font-weight:bold;
-  position:relative;
-  white-space: nowrap;
+    margin:0;
+    padding:0 1.5em; /* indentation + .5em */
+    line-height:2em; /* default list item's `line-height` */
+    color:#369;
+    font-weight:bold;
+    position:relative;
+    white-space: nowrap;
 }
 
 .tree ul li:before {
-  content:"";
-  display:block;
-  width:10px; /* same with indentation */
-  height:0;
-  border-top:1px solid;
-  margin-top:-1px; /* border top width */
-  position:absolute;
-  top:1em; /* (line-height/2) */
-  left:0;
+    content:"";
+    display:block;
+    width:10px; /* same with indentation */
+    height:0;
+    border-top:1px solid;
+    margin-top:-1px; /* border top width */
+    position:absolute;
+    top:1em; /* (line-height/2) */
+    left:0;
 }
 
 .tree ul li:last-child:before {
-  background:white; /* same with body background */
-  height:auto;
-  top:1em; /* (line-height/2) */
-  bottom:0;
+    background:white; /* same with body background */
+    height:auto;
+    top:1em; /* (line-height/2) */
+    bottom:0;
 }
 
 
 .tree li>span:after
 {
-	border: 1px solid #369;
-	padding:2px;
-	color:#369;
-	content: '-';
+    border: 1px solid #369;
+    padding:2px;
+    color:#369;
+    content: '-';
 }
 
 .tree li.closed>span:after
 {
-	content: '+';
+    content: '+';
 }
